# projektarbeit-ii-Team-2

./: .clang-format  .clang-tidy  Readme.md  format.bat
assets/: dialog_test_text.txt
docs/: _collision_8cpp.html  _collision_8cpp__incl.dot  _collision_8cpp__incl.map  _collision_8cpp__incl.md5  _collision_8cpp_source.html  _collision_8h.html  _collision_8h__dep__incl.dot  _collision_8h__dep__incl.map  _collision_8h__dep__incl.md5  _collision_8h__incl.dot  _collision_8h__incl.map  _collision_8h__incl.md5  (+551 more)
src/: CMakeLists.txt  INCLUDES.h  Level.cpp  Level.h  Nemo.cpp  Nemo.h  Sprite.cpp  Sprite.h  Titlescreen.cpp  Titlescreen.h  UI.cpp  UI.h  config.h.in  main.cpp
src/Combat/: Combat_Button.cpp  Combat_Button.h  Enemy.cpp  Enemy.h  GameCharacter.cpp  GameCharacter.h  Mumy.cpp  Mumy.h  Pharaoh.cpp  Pharaoh.h  Player.cpp  Player.h  Shadow.cpp  Shadow.h  c_enemy.cpp  c_enemy.h  c_player.cpp  c_player.h  combat.cpp  combat.h
src/Enemy Overworld Sprites/: Mumy.cpp  Mumy.h  Pharaoh.cpp  Pharaoh.h  Shadow.cpp  Shadow.h
src/Level/: Armor.cpp  Armor.h  Collision.cpp  Collision.h  Dialogue.cpp  Dialogue.h  Endscreen.cpp  Endscreen.h  GameAudio.cpp  GameAudio.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Level.cpp  Level.h  Map.cpp  Map.h  PhyramidenEingang..json  PhyramidenEingang.tmx  PhyramidenEingangNeu.json  PhyramidenEingangNeu.tmx  PhyramidenEingangNeu_ Sandweg in Phyramide.csv  PhyramidenEingangNeu_Hintergrund_ Sandanimation.csv  PhyramidenEingangNeu_Random Steine.csv  PhyramidenEingangNeu_Tür.csv  PhyramidenEingangNeu_Wand_Stein Collison.csv  PhyramidenEingang_Kachelebene 1.csv  PhyramidenEingang_Stone.csv  PhyramidenEingang_Weg.csv  Potion.cpp  Potion.h  Puzzle.cpp  Puzzle.h  Sand.tsx  Sandweg.tsx  TextureManager.cpp  TextureManager.h  Tile.cpp  Tile.h  (+6 more)
src/Level/Map Stuff/: PhyramidenEingangNeu.json  PhyramidenEingangNeu.tmx  PhyramidenEingangNeu_Hintergrund_ Sandanimation.csv  PhyramidenEingangNeu_Tür.csv  PhyramidenEingangNeu_Wand_Stein Collison.csv  Sand.tsx  Sandweg.tsx  Ägypten-Sheet.tsx
src/Player/: Nemo.cpp  Nemo.h
src/Sprite/: Sprite.cpp  Sprite.h
(+112 files in other folders)
